-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u311, jfx18
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274385 | jfx17.0.1 | Kevin Rushforth | P2 | Resolved | Fixed | |
| JDK-8274384 | jfx11.0.13 | Kevin Rushforth | P2 | Resolved | Fixed | |
| JDK-8274302 | 8u321 | Ambarish Rapte | P2 | Resolved | Fixed | b01 |
| JDK-8274348 | 8u311 | Ambarish Rapte | P2 | Closed | Fixed | b11 |
- backported by
-
JDK-8274302 Cherry pick GTK WebKit 2.32.4 changes
-
- Resolved
-
-
JDK-8274384 Cherry pick GTK WebKit 2.32.4 changes
-
- Resolved
-
-
JDK-8274385 Cherry pick GTK WebKit 2.32.4 changes
-
- Resolved
-
-
JDK-8274348 Cherry pick GTK WebKit 2.32.4 changes
-
- Closed
-
- relates to
-
JDK-8268849 Update to 612.1 version of WebKit
-
- Resolved
-
-
JDK-8272329 Cherry pick GTK WebKit 2.32.3 changes
-
- Resolved
-
- links to
-
Commit
openjdk/jfx11u/070c2435
-
Commit
openjdk/jfx17u/90a7c28c
-
Commit
openjdk/jfx/478512b7
-
Review
openjdk/jfx11u/54
-
Review
openjdk/jfx17u/13
-
Review
openjdk/jfx/631