8274107: Cherry pick GTK WebKit 2.32.4 changes

Reviewed-by: kcr, jvos